--- a/Python Programming - Lab - 7.ipynb
+++ b/Python Programming - Lab - 7.ipynb
@@ -246,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_values([0, 0, 0, 0, 0])\n"
+      "ANAGRAM\n"
      ]
     }
    ],
@@ -440,14 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "8\n"
      ]
     }
    ],
@@ -457,6 +457,37 @@
     "print(dict1.get(key1,\"key not found\"))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 9\n",
+    "b = 4\n",
+    "\n",
+    "c =a ^ b\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
