--- a/Python Programming - Lab - 9.ipynb
+++ b/Python Programming - Lab - 9.ipynb
@@ -30,25 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello from text file.']\n",
-      "hello from text file.\n"
+      "['hello from 1 line.\\n', 'hello from 2 line.\\n', 'hello from 3 line.\\n', 'hello from 4 line.\\n', 'hello from 5 line.']\n",
+      "hello from 1 li\n"
      ]
     }
    ],
    "source": [
-    "fp = open('frist.txt','r')\n",
+    "fp = open('new1.txt','r')\n",
     "\n",
     "print(fp.readlines())\n",
     "fp.close()\n",
-    "fp = open('frist.txt','r')\n",
-    "print(fp.read())\n"
+    "fp = open('new1.txt','r',12)\n",
+    "print(fp.read(15))\n"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,21 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello from 1 line.\\n', 'hello from 2 line.\\n', 'hello from 3 line.\\n', 'hello from 4 line.\\n']\n"
+      "hello from 1 line.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "fs = open('new1.txt','r')\n",
-    "line = fs.readlines()\n",
-    "print(line[0:4])"
+    "line = fs.readline(23)\n",
+    "print(line)"
    ]
   },
   {
