--- a/Python Programming - Lab - 13_2.ipynb
+++ b/Python Programming - Lab - 13_2.ipynb
@@ -8,6 +8,7 @@
     "<pre>\n",
     "<center><b><h1>Python Programming - 2301CS404</b></center>\n",
     "<center><b><h1>Lab - 13</b></center>    \n",
+    "<center><b><h1>Padhiyar meet</b> <b>23010101180</b></center>   \n",
     "<pre>"
    ]
   },
@@ -369,7 +370,7 @@
    "outputs": [],
    "source": [
     "class Shape(ABC):\n",
-    "    @abstractmethod\n",
+    "   \n",
     "    def draw(self):\n",
     "        pass\n",
     "\n",
