--- a/Python Programming - Lab - 8.ipynb
+++ b/Python Programming - Lab - 8.ipynb
@@ -7,7 +7,8 @@
     "<a href='https://www.darshan.ac.in/'> <img src='https://www.darshan.ac.in/Content/media/DU_Logo.svg' width=\"250\" height=\"300\"/></a>\n",
     "<pre>\n",
     "<center><b><h1>Python Programming - 2301CS404</b></center>\n",
-    "<center><b><h1>Lab - 8</b></center>    \n",
+    "<center><b><h1>Lab - 8</b></center>  \n",
+    "<center><b><h1>Padhiyar meet</b> <b>23010101180</b></center>     \n",
     "<pre>"
    ]
   },
@@ -493,7 +494,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def positional_args(name, age):\n",
+    "    print(f\"Positional Arguments -> Name: {name}, Age: {age}\")\n",
+    "\n",
+    "positional_args(\"Alice\", 25)\n",
+    "\n",
+    "def keyword_args(name, age):\n",
+    "    print(f\"Keyword Arguments -> Name: {name}, Age: {age}\")\n",
+    "\n",
+    "keyword_args(age=30, name=\"Bob\")\n",
+    "\n",
+    "def default_args(name, age=18):\n",
+    "    print(f\"Default Arguments -> Name: {name}, Age: {age}\")\n",
+    "\n",
+    "default_args(\"Charlie\")\n",
+    "default_args(\"Charlie\", 22)  \n",
+    "\n",
+    "def variable_length_args(*args, **kwargs):\n",
+    "    print(\"Variable Length Positional Arguments (*args):\", args)\n",
+    "    print(\"Variable Length Keyword Arguments (**kwargs):\", kwargs)\n",
+    "\n",
+    "variable_length_args(1, 2, 3, name=\"David\", age=40)\n",
+    "\n",
+    "def mixed_arguments(a, /, b, *, c):\n",
+    "    print(f\"Positional-Only: {a}, Regular: {b}, Keyword-Only: {c}\")\n",
+    "\n",
+    "mixed_arguments(10, b=20, c=30)  # Valid\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
