--- a/Python Programming - Lab - 9.ipynb
+++ b/Python Programming - Lab - 9.ipynb
@@ -7,7 +7,8 @@
     "<a href='https://www.darshan.ac.in/'> <img src='https://www.darshan.ac.in/Content/media/DU_Logo.svg' width=\"250\" height=\"300\"/></a>\n",
     "<pre>\n",
     "<center><b><h1>Python Programming - 2301CS404</b></center>\n",
-    "<center><b><h1>Lab - 9</b></center>    \n",
+    "<center><b><h1>Lab - 9</b></center> \n",
+    "<center><b><h1>Padhiyar meet</b> <b>23010101180</b></center>      \n",
     "<pre>"
    ]
   },
@@ -214,7 +215,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "file_name = input(\"Enter the file name: \")\n",
+    "\n",
+    "\n",
+    "if os.path.exists(file_name):\n",
+    "    file_size = os.path.getsize(file_name)\n",
+    "    print(f\"Size of '{file_name}' is {file_size} bytes\")\n",
+    "else:\n",
+    "    print(\"File not found!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -377,7 +388,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Taking user input for file names and words\n",
+    "input_file = input(\"Enter the input file name: \")\n",
+    "output_file = input(\"Enter the output file name: \")\n",
+    "word1 = input(\"Enter the word to replace: \")\n",
+    "word2 = input(\"Enter the new word: \")\n",
+    "\n",
+    "try:\n",
+    "    with open(input_file, \"r\") as file:\n",
+    "        data = file.read()\n",
+    "\n",
+    "    updated_data = data.replace(word1, word2)\n",
+    "\n",
+    "    with open(output_file, \"w\") as file:\n",
+    "        file.write(updated_data)\n",
+    "\n",
+    "    print(f\"Updated content has been saved in '{output_file}'\")\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Error: Input file not found!\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -391,7 +422,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"sample.txt\", \"w\") as f:\n",
+    "    f.write(\"Hello, this is a sample file for testing seek() and tell().\")\n",
+    "\n",
+    "with open(\"sample.txt\", \"r\") as f:\n",
+    "    print(\"Initial Position:\", f.tell()) \n",
+    "    f.seek(7, 0)  \n",
+    "    print(\"Position after seek(7, 0):\", f.tell())  # 7\n",
+    "    print(\"Reading 5 characters:\", f.read(5))  \n",
+    "    print(\"Current Position:\", f.tell())  \n",
+    "    f.seek(3, 1)  \n",
+    "    print(\"Position after seek(3, 1):\", f.tell())  \n",
+    "    f.seek(-10, 2)  \n",
+    "    print(\"Position after seek(-10, 2):\", f.tell())  \n",
+    "    print(\"Reading last 10 characters:\", f.read())  \n"
+   ]
   }
  ],
  "metadata": {
