--- a/Python Programming - Lab - 1.ipynb
+++ b/Python Programming - Lab - 1.ipynb
@@ -7,7 +7,8 @@
     "<a href='https://www.darshan.ac.in/'> <img src='https://www.darshan.ac.in/Content/media/DU_Logo.svg' width=\"250\" height=\"10\"/></a>\n",
     "<pre>\n",
     "<center><b><h1>Python Programming - 2301CS404</b></center>\n",
-    "<center><b><h1>Lab - 1</b></center>    \n",
+    "<center><b><h1>Lab - 1</b></center>   \n",
+    "<center><b><h1>Padhiyar meet</b> <b>23010101180</b></center>    \n",
     "<pre>"
    ]
   },
@@ -260,16 +261,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distance in Meters: 12000.0 m\n",
+      "Distance in Feet: 39370.08 ft\n",
+      "Distance in Inches: 472441.19999999995 in\n",
+      "Distance in Centimeters: 1200000.0 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_distance(km):\n",
+    "    meters = km * 1000\n",
+    "    feet = km * 3280.84\n",
+    "    inches = km * 39370.1\n",
+    "    centimeters = km * 100000\n",
+    "    \n",
+    "    print(f\"Distance in Meters: {meters} m\")\n",
+    "    print(f\"Distance in Feet: {feet} ft\")\n",
+    "    print(f\"Distance in Inches: {inches} in\")\n",
+    "    print(f\"Distance in Centimeters: {centimeters} cm\")\n",
+    "\n",
+    "kilometers = float(input(\"Enter distance in kilometers: \"))\n",
+    "\n",
+    "convert_distance(kilometers)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 15) WAP to get day, month and year from the user and print the date in the given format: 23-11-2024."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatted Date: 12-12-2012\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = int(input(\"Enter day (DD): \"))\n",
+    "month = int(input(\"Enter month (MM): \"))\n",
+    "year = int(input(\"Enter year (YYYY): \"))\n",
+    "\n",
+    "formatted_date = f\"{day:02d}-{month:02d}-{year}\"\n",
+    "print(\"Formatted Date:\", formatted_date)"
    ]
   },
   {
@@ -282,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -297,11 +346,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.7"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
   }
  },
  "nbformat": 4,
