--- a/Python Programming - Lab - 4.ipynb
+++ b/Python Programming - Lab - 4.ipynb
@@ -8,7 +8,8 @@
     "<a href='https://www.darshan.ac.in/'> <img src='https://www.darshan.ac.in/Content/media/DU_Logo.svg' width=\"250\" height=\"300\"/></a>\n",
     "<pre>\n",
     "<center><b><h1>Python Programming - 2301CS404</b></center>\n",
-    "<center><b><h1>Lab - 4</b></center>    \n",
+    "<center><b><h1>Lab - 4</b></center>   \n",
+    "<center><b><h1>Padhiyar meet</b> <b>23010101180</b></center>    \n",
     "<pre>"
    ]
   },
@@ -85,26 +86,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'tuple'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter a String-\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menter index - \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m----> 4\u001b[0m s2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'tuple'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String after removal: met\n"
      ]
     }
    ],
    "source": [
-    "str = input(\"Enter a String-\")\n",
-    "index = int(input(\"enter index - \"))\n",
+    "string = input(\"Enter the string: \")\n",
+    "index = int(input(\"Enter the index to remove: \"))\n",
     "\n",
-    "s2 = (str[index,index+1])"
+    "if 0 <= index < len(string):\n",
+    "    new_string = string[:index] + string[index+1:] \n",
+    "    print(\"String after removal:\", new_string)\n",
+    "else:\n",
+    "    print(\"Invalid index!\")\n"
    ]
   },
   {
@@ -383,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -397,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
