--- a/Python Programming - Lab - 7.ipynb
+++ b/Python Programming - Lab - 7.ipynb
@@ -7,7 +7,8 @@
     "<a href='https://www.darshan.ac.in/'> <img src='https://www.darshan.ac.in/Content/media/DU_Logo.svg' width=\"250\" height=\"300\"/></a>\n",
     "<pre>\n",
     "<center><b><h1>Python Programming - 2301CS404</b></center>\n",
-    "<center><b><h1>Lab - 7</b></center>    \n",
+    "<center><b><h1>Lab - 7</b></center>  \n",
+    "<center><b><h1>Padhiyar meet</b> <b>23010101180</b></center>     \n",
     "<pre>"
    ]
   },
@@ -409,23 +410,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m dic \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m1\u001b[39m:\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m2\u001b[39m:\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m3\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m50\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m4\u001b[39m:\u001b[38;5;241m56\u001b[39m}\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdic\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "156\n"
      ]
     }
    ],
    "source": [
-    "dic = {1:20,2:30,3:'50',4:56}\n",
+    "dic = {1:20,2:30,3:50,4:56}\n",
     "print(sum(dic.values()))"
    ]
   },
