--- a/Python Programming - Lab - 4.ipynb
+++ b/Python Programming - Lab - 4.ipynb
@@ -237,19 +237,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "meet is my name \n"
+      "hii hello whats up \n"
      ]
     }
    ],
    "source": [
-    "arr = ['meet','is','my','name']\n",
+    "arr = ['hii','hello','whats','up']\n",
     "str = \"\"\n",
     "for name in arr:\n",
     "    str += name\n",
