--- a/Python Programming - Lab - 10.ipynb
+++ b/Python Programming - Lab - 10.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
     "try:\n",
     "    print(100/0)\n",
     "except:\n",
-    "    print('something vent Wrong !')"
+    "    print('something went Wrong !')"
    ]
   },
   {
