--- a/Python Programming - Lab - 7.ipynb
+++ b/Python Programming - Lab - 7.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,8 +126,8 @@
     }
    ],
    "source": [
-    "s1 = {'andar','ka','kutta'}\n",
-    "s2 = {'ajj','chadiye','....'}\n",
+    "s1 = {'one','two','three'}\n",
+    "s2 = {'four','five','six'}\n",
     "s3 = s1.union(s2)\n",
     "print(s3)\n"
    ]
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
     }
    ],
    "source": [
-    "str = 'i am in love with the shap of you!!'\n",
+    "str = 'python is a coding language..!'\n",
     "count = 0\n",
     "for i in str:\n",
     "    if i.lower() in set('aeiou'):\n",
