--- a/Python Programming - Lab - 6.ipynb
+++ b/Python Programming - Lab - 6.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
     "k  = int(input(\"Enter a length -\"))\n",
     "b = list(a)\n",
     "b = list(set(sorted(b)))\n",
-    "print(b[0:k],b[-k:])\n"
+    "print(b[0:k],b[-k:])"
    ]
   },
   {
